@@ -1,4 +1,5 @@
 Development
+    Updated the paned resize and shrinking rules to work better
     Updated German Translation
     Copy gio temp file to $HOME/.gnome-mplayer/cache instead of /tmp
     Fix problems in ICY info display, due to rework of media_label
